# aoede

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.sample.toml
.github/workflows/: build-and-release.yml  build-binaries-for-release.yml  build.yml  create-release.yml  lint.yml  publish-image.yml  release.yml
src/: main.rs
src/lib/: config.rs  player.rs
