[package]
name = "aoede"
version = "0.6.0"
authors = ["Max Isom <hi@maxisom.me>"]
edition = "2021"

[dependencies]
librespot = {version = "0.4.2", default-features = false}
songbird = "0.3.0"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
tokio = { version = "1.23.0", features = ["default"] }
byteorder = "1.4.3"
serde = "1.0"
figment = { version = "0.10", features = ["toml", "env"] }
rubato = "0.12.0"

[dependencies.serenity]
version = "0.11.5"
features = ["client", "utils"]

[profile.dev]
split-debuginfo = "unpacked"
