[package]
name = "aoede"
version = "0.6.2"
authors = ["Max Isom <hi@maxisom.me>"]
edition = "2018"

[dependencies]
librespot = {version = "0.4.2", default-features = false}
songbird = "0.3.1"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
tokio = { version = "1.20.1", features = ["default"] }
byteorder = "1.4.3"
serde = "1.0"
figment = { version = "0.10", features = ["toml", "env"] }
rubato = "0.12.0"

[dependencies.serenity]
version = "0.11.2"
features = ["client"]

[profile.dev]
split-debuginfo = "unpacked"
